--- a/etc/input.conf
+++ b/etc/input.conf
@@ -236,3 +236,19 @@
 
 # ? cycle sub-forced-events-only        # display only DVD/PGS forced subtitle events
 # ? stop                                # stop playback (quit or enter idle mode)
+
+RIGHT seek  10
+LEFT  seek -10
+UP    add volume 5
+DOWN  add volume -5
+
+TAB show-progress
+
+1 set window-scale 0.5
+2 set window-scale 1.0
+3 set window-scale 1.5
+
+s cycle sub
+a cycle audio
+
+n af toggle "lavfi=[dynaudnorm=g=11:s=8]"
