--- a/etc/mpv.conf
+++ b/etc/mpv.conf
@@ -141,3 +141,29 @@
 
 #[eye-cancer]
 #sharpen=5
+
+osc=no
+osd-bar=no
+osd-scale-by-window=no
+osd-font="Consolas"
+osd-font-size=28
+osd-color=1.0/1.0/0.0
+osd-on-seek=msg
+osd-duration=4000
+osd-shadow-color=0.0/0.0/0.0/0.25
+osd-shadow-offset=2
+osd-border-size=1.2
+sub-color=1.0/1.0/0.0
+sub-border-size=2
+volume=70
+ad-lavc-downmix=yes
+audio-channels=stereo
+script-opts-append=osc-deadzonesize=0.8
+script-opts-append=osc-timetotal=yes
+script-opts-append=stats-font="Consolas"
+script-opts-append=stats-font_mono="Consolas"
+
+[windowed]
+profile-cond=not fullscreen
+profile-restore=copy
+script-opts-append=osc-visibility=always
